# draft-app

./: .gitignore  .pre-commit-config.yaml  .sprite  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  alembic.ini  environment.yml  fly.cron.stage.toml  fly.cron.toml  fly.prod.toml  fly.toml  pyproject.toml  requirements.txt
.codex/: config.toml
alembic/: README.md  env.py  script.py.mako
app/: config.py  logging_config.py  main.py  test_db_connection.py
docs/: BUSINESS_MODELS.md  admin_auth_system_plan.md  admin_image_browsing.md  admin_panel.md  batch_image_retrieval_fix.md  bbref_bio_runbook.md  bug_investigation_percentile_rank_mismatch.md  combine_anthro (2).json  combine_anthro.json  competitive_analysis_draftballr.md  competitor_analysis.md  consensus_mock_plan.md  data_model.md  db_transaction_refactor_plan.md  draft_calendar_2026.md  film_room_plan.md  fly_infrastructure.md  gemini_roadmap.md  image_generation_pipeline.md  ip_copyright_risk_assessment.md  metric_snapshots (1).json  metric_snapshots.csv  metric_snapshots.json  metric_snapshots_design.md  metric_snapshots_final.json  metric_snapshots_shooting.json  metrics_pipeline.md  metrics_session_report_2025-11-16.md  opus_4_5_app_development_roadmap.md  physical_similarity_spec.md  player_bio_ingestion.md  player_detail_null_college_bug.md  player_images_implementation.md  player_news_feed_plan.md  player_profile_implementation.md  player_similarity_brainstorm.md  player_similarity_plan.md  player_tags_review.md  podcast_implementation_plan.md  prediction_market_vision.md  (+18 more)
mockups/: draftguru_combine_score.html  draftguru_consensus_board.html  draftguru_film_room.html  draftguru_homepage.html  draftguru_homepage_plain.html  draftguru_news_homepage.html  draftguru_player.html  draftguru_player_media_feeds.html  draftguru_podcasts.html  draftguru_podcasts_v2.html  draftguru_stats_draft_year.html  draftguru_stats_draft_year_v2.html  draftguru_stats_homepage.html  draftguru_stats_metric.html  draftguru_trending_v2.html  player_stats_display.html  positional_breakdown.html
scraper/: combine_shooting.txt  sample_2023_24_agility.html  sample_2023_24_anthro.html  sample_2023_24_shooting.html
scripts/: backfill_combine_scores.py  backfill_player_mentions.py  backfill_school_names.py  bbref_bio_scraper.py  check_combine_scores.py  check_counts.py  check_metrics_counts.py  check_request_transaction_policy.py  collect_college_logos.py  collect_nba_logos.py  deduplicate_players.py  fix_locked_on_podcast_urls.py  generate_player_images.py  generate_school_mapping.py  generate_school_seed_data.py  ingest_combine.py  ingest_player_bios.py  nba_draft_scraper.py  prod_bad_image_url_cleanup.py  prod_duplicate_player_cleanup.py  prod_lifecycle_expected_year_cleanup.py  prod_top100_cleanup_plan.py  prod_top100_promote.py  prospect_integrity_audit.py  prospect_lifecycle_cleanup_plan.py  scrape_college_stats.py  seed_college_schools.py  seed_film_room.py  seed_nba_teams.py  seed_news_sources.py  top100_audit.py  (+4 more)
(+409 files in other folders)
