[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "draftguru"
version = "0.1.0"
description = "FastAPI + SQLModel skeleton for a draft analytics app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "sqlmodel",
    "pydantic-settings",
    "psycopg",
    "asyncpg",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
