[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "draftguru"
version = "0.1.0"
description = "FastAPI + SQLModel skeleton for a draft analytics app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.116.1",
    "sqlmodel==0.0.24",
    "pydantic-settings==2.10.1",
    "psycopg==3.2.9",
    "asyncpg==0.30.0",
    "alembic==1.16.5",
    "beautifulsoup4==4.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "httpx==0.28.1",
    "ruff==0.13.0",
    "mypy==1.18.1",
    "pre-commit==3.8.0",
    "pandas-stubs"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.scripts.compute_metrics"
disable_error_code = "attr-defined,arg-type,call-overload,misc"
